--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-devicon": "^0.1.9",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.0.1",
     "web-vitals": "^1.0.1"
   },
@@ -46,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
