--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "devicon": "^2.14.0",
     "jquery": "^3.6.0",
+    "lucide-react": "^0.475.0",
     "react": "^17.0.2",
     "react-devicon": "^0.1.9",
     "react-dom": "^17.0.2",
